SVTR-255 Add a tool to update current weight
