# web/openapi.json
@@ -338,6 +338,91 @@
           }
         }
       }
+    },
+    "/app/api/weight/log/save": {
+      "post": {
+        "summary": "Save a weight log.",
+        "description": "This endpoint allows users to save a weight log for a specific date.",
+        "operationId": "Weight_Log_Save",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "weight": {
+                    "$ref": "#/components/schemas/Weight"
+                  }
+                },
+                "required": ["weight"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Calorie log draft saved successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "meta": {
+                      "$ref": "#/components/schemas/Response_Meta"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request. Missing or invalid data.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "meta": {
+                      "$ref": "#/components/schemas/Response_Meta"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "402": {
+            "description": "Payment required. User does not have an active subscription.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "meta": {
+                      "$ref": "#/components/schemas/Response_Meta"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "meta": {
+                      "$ref": "#/components/schemas/Response_Meta"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -478,6 +563,28 @@
           "dateBirth", "dateCreated", "goal", "height", "locale", "name", "promptStart", "sex", "timezone", "weight"
         ],
         "description": "User profile details including personal and physical information."
+      },
+      "Weight": {
+        "type": "object",
+        "properties": {
+          "date": {
+            "type": "string",
+            "format": "date",
+            "description": "Date of the weight measurement (format: YYYY-MM-DD, no time part)."
+          },
+          "note": {
+            "type": "string",
+            "description": "Optional user comment related to the measurement."
+          },
+          "value": {
+            "type": "number",
+            "description": "Body weight value in kilograms."
+          }
+        },
+        "required": [
+          "date", "value"
+        ],
+        "description": "Represents a weight measurement for a specific date."
       }
     }
   }
